RESOLVED FIXED273661
[UnifedPDF] Occasional crash at GraphicsLayerCA::setNeedsDisplayInRect() with slow-rendering PDFs
https://bugs.webkit.org/show_bug.cgi?id=273661
Summary [UnifedPDF] Occasional crash at GraphicsLayerCA::setNeedsDisplayInRect() with...
Simon Fraser (smfr)
Reported 2024-05-02 17:38:09 PDT
The GraphicsLayer client can go bad if GraphicsLayers persist after we've destroyed the UnifiedPDFPlugin.
Attachments
Simon Fraser (smfr)
Comment 1 2024-05-02 17:38:22 PDT
Simon Fraser (smfr)
Comment 2 2024-05-02 17:43:28 PDT
EWS
Comment 3 2024-05-02 19:15:20 PDT
Committed 278298@main (593a44258e5e): <https://commits.webkit.org/278298@main> Reviewed commits have been landed. Closing PR #28073 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.