[UnifedPDF] Occasional crash at GraphicsLayerCA::setNeedsDisplayInRect() with slow-rendering PDFs https://bugs.webkit.org/show_bug.cgi?id=273661 rdar://127443945

Reviewed by Abrar Rahman Protyasha.

We should use `unparentAndClear()` on the GraphicsLayers to both unparent them, and clear their
GraphicsLayerClient. Do this on the layers which draw content, since those are the ones whose
clients can get called after a delay.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::teardown):

Canonical link: https://commits.webkit.org/278298@main